fix z-index

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-    box-sizing: border-box;
     background-color:#313131;
     color:azure;
     font-family:'Playfair Display', serif;
@@ -96,11 +95,12 @@
   height: 100vh;
   margin: 0;
   padding: 0;
+  z-index:2;
 }
 .mirroris::before {
   background-image: url("img/RedAndBlue.jpg");
   position: absolute;
   height: 100vh;
   opacity:0.5; /* Set the transparency level here */
-  z-index:-1;
+  z-index:1;
 }
